--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
     <head>
-        <title>Form Example</title>
+        <title>Pagina clima</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -58,4 +58,6 @@
             // Add other bootstrap parameters as needed, using camel case.
             });
         </script>
+        <h6> By Diego Chicuazuque Castiblanco</h6>
+        <h6> Repositorio: https://github.com/marzo245/demo.git</h6>
 </html>
